DFR-1768-Update with stream toList()